/* eslint-env jest */

import React from 'react';
import {mount} from 'enzyme';
import {BasicPure, BasicWithUndefined} from './fixtures/pure-function';
import {BasicClass, ClassWithPure, ClassWithDirectPure, ClassWithDirectComponent} from './fixtures/class';

it('converts basic pure mount', () => {
  const mounted = mount(
    <BasicPure className="pure"><strong>Hello!</strong></BasicPure>
    );

  expect(mounted).toMatchSnapshot();
});

it('converts basic class mount', () => {
  const mounted = mount(
    <BasicClass className="class"><strong>Hello!</strong></BasicClass>
    );

  expect(mounted).toMatchSnapshot();
});

it('converts a class mount with a pure function in it', () => {
  const mounted = mount(
    <ClassWithPure className="class"><strong>Hello!</strong></ClassWithPure>
    );

  expect(mounted).toMatchSnapshot();
});

it('converts a class mount with a pure function in it as a direct child', () => {
  const mounted = mount(
    <ClassWithDirectPure className="class"><strong>Hello!</strong></ClassWithDirectPure>
    );

  expect(mounted).toMatchSnapshot();
});

it('converts a class mount with a class component in it as a direct child', () => {
  const mounted = mount(
    <ClassWithDirectComponent className="class"><strong>Hello!</strong></ClassWithDirectComponent>
    );

  expect(mounted).toMatchSnapshot();
});

it('skips undefined props', () => {
  const mounted = mount(
    <BasicWithUndefined>Hello!</BasicWithUndefined>
    );

  expect(mounted).toMatchSnapshot();
});
