// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`converts a class mount with a class component in it as a direct child 1`] = `
<ClassWithDirectComponent
  className="class"
>
  <ClassWithPure
    className="nested-pure"
  >
    <div
      className="class-with-pure nested-pure"
      onClick={[Function]}
    >
      <BasicPure
        className="nested-pure"
      >
        <div
          className="basic-pure nested-pure"
          onClick={[Function]}
        >
          <div
            className="group"
            id="group-id"
          >
            <span>
              <span>
                <span>
                  <strong>
                    Hello!
                  </strong>
                </span>
                <span
                  className="empty"
                />
              </span>
              <span
                className="empty"
              />
            </span>
            <span
              className="empty"
            />
          </div>
        </div>
      </BasicPure>
    </div>
  </ClassWithPure>
</ClassWithDirectComponent>
`;

exports[`converts a class mount with a pure function in it 1`] = `
<ClassWithPure
  className="class"
>
  <div
    className="class-with-pure class"
    onClick={[Function]}
  >
    <BasicPure
      className="nested-pure"
    >
      <div
        className="basic-pure nested-pure"
        onClick={[Function]}
      >
        <div
          className="group"
          id="group-id"
        >
          <span>
            <span>
              <strong>
                Hello!
              </strong>
            </span>
            <span
              className="empty"
            />
          </span>
          <span
            className="empty"
          />
        </div>
      </div>
    </BasicPure>
  </div>
</ClassWithPure>
`;

exports[`converts a class mount with a pure function in it as a direct child 1`] = `
<ClassWithDirectPure
  className="class"
>
  <BasicPure
    className="nested-pure"
  >
    <div
      className="basic-pure nested-pure"
      onClick={[Function]}
    >
      <div
        className="group"
        id="group-id"
      >
        <span>
          <span>
            <strong>
              Hello!
            </strong>
          </span>
          <span
            className="empty"
          />
        </span>
        <span
          className="empty"
        />
      </div>
    </div>
  </BasicPure>
</ClassWithDirectPure>
`;

exports[`converts basic class mount 1`] = `
<BasicClass
  className="class"
>
  <div
    className="basic-class class"
    onClick={[Function]}
  >
    <div
      className="group"
      id="group-id"
    >
      <span>
        <strong>
          Hello!
        </strong>
      </span>
      <span
        className="empty"
      />
    </div>
  </div>
</BasicClass>
`;

exports[`converts basic pure mount 1`] = `
<BasicPure
  className="pure"
>
  <div
    className="basic-pure pure"
    onClick={[Function]}
  >
    <div
      className="group"
      id="group-id"
    >
      <span>
        <strong>
          Hello!
        </strong>
      </span>
      <span
        className="empty"
      />
    </div>
  </div>
</BasicPure>
`;

exports[`skips undefined props 1`] = `
<BasicWithUndefined>
  <button>
    Hello
  </button>
</BasicWithUndefined>
`;
